ghost.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: gh
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
    - name: ghostport
      protocol: TCP
      port: 2368
      targetPort: 2368
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: gh
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: con-ghost
        image: ghost:4
        volumeMounts:
        - name: ghost-pvc-deploy
          mountPath: "/var/lib/ghost/current/content"
        ports:
        - containerPort: 2368
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"
      volumes:
      - name: ghost-pvc-deploy
        persistentVolumeClaim:
          claimName: ghost-pvc
